# edml

./: .clang-format  .clangd  .gitignore  .gitmodules  Justfile  assertions.opam  dune-project  edml.opam  tree_sitter.c  tree_sitter.opam
ansi/: color.ml  command.ml  cursor.ml  dune  escape.ml  event.ml  terminal.c  terminal.ml
assertions/: assertions.ml  dune
channel/: channel.ml  dune
edml/: assert.ml  base.ml  colorscheme.ml  cursor.ml  dune  editor.ml  event_handler.ml  filetype.ml  fs.ml  languages.ml  pane.ml  syntax.ml  text_buffer.ml  text_object.ml  types.ml  utils.ml  viewport.ml
edml/tests/: cursor_test.ml  dune  editor_test.ml  text_object_test.ml  viewport_test.ml
edml_term/: dune  init.ml  main.ml
edml_term/lib/: ansi_to_editor.ml  dune  load_colorscheme.ml  viewport.ml
edml_term/lib/tests/: dune  viewport_test.ml
edml_term/tests/: dune  viewport_test.ml
keymap/: dune  event_handler.ml  keymap_provider.ml  trie.ml  types.ml
lib/: buffer.ml  cursor.ml  cursor_test.ml  dune  editor.ml  editor_test.ml  event_handler.ml  fs.ml  pane.ml  terminal.ml  terminal.mli  text_buffer.ml  text_object.ml  types.ml  viewport.ml  viewport_test.ml
lib/ansi/: cursor.ml  cursor.mli  dune  event.ml  event.mli  event_test.ml  terminal.c  terminal.ml  terminal.mli
logger/: dune  logger.ml  logger.mli
scripts/: build_tree_sitter_grammars.sh
test/: dune
tree_sitter/: bindings.ml  dune  generate_stubs.ml  stub_generator.ml  tree_sitter.ml  tree_sitter_types.ml  types.ml  utils.ml
trie/: dune  trie.ml
