(library
  (name tree_sitter)
  (modules tree_sitter)
  (libraries ctypes ctypes.stubs))

(executable
  (name stub_generator)
  (modules stub_generator)
  (libraries ctypes ctypes.stubs tree_sitter))

(rule
  (targets tree_sitter_stubs.c tree_sitter_generated.ml)
  (deps stub_generator.exe)
  (action 
    (run %{deps})))

(library
  (name tree_sitter_generated)
  (modules tree_sitter_generated)
  (c_library_flags
    -L%{env:LANGUAGES_DIR=/usr/lib}/javascript
    -ltree-sitter-javascript
    -L%{env:LANGUAGES_DIR=/usr/lib}/ocaml
    -ltree-sitter-ocaml
    -L%{env:TSLIB=/usr/lib} 
    -ltree-sitter)
  (foreign_stubs
    (language c)
    (names tree_sitter_stubs)
    (flags 
      -I%{env:TSINC=/usr/include}
      -I%{workspace_root}/languages/javascript
      -I%{workspace_root}/languages/ocaml))
  (libraries ctypes.stubs))
