(library
  (name bindings)
  (modules bindings)
  (libraries ctypes ctypes.stubs))

(library
  (name tree_sitter)
  (modules tree_sitter utils tree_sitter_types)
  (libraries
    ctypes
    core
    ctypes.stubs
    ctypes.foreign
    bindings
    tree_sitter_generated
    assertions)
  (preprocess (pps
    ppx_deriving.show
    ppx_deriving.eq)))

(executable
  (name stub_generator)
  (modules stub_generator)
  (libraries ctypes ctypes.stubs bindings))

(rule
  (targets tree_sitter_stubs.c tree_sitter_generated.ml)
  (deps stub_generator.exe)
  (action 
    (run %{deps})))

(library
  (name tree_sitter_generated)
  (modules tree_sitter_generated)
  (c_library_flags
    -L%{env:LANGUAGES_DIR=/usr/lib}/javascript
    -ltree-sitter-javascript
    -L%{env:LANGUAGES_DIR=/usr/lib}/ocaml
    -ltree-sitter-ocaml
    -L%{env:TSLIB=/usr/lib} 
    -ltree-sitter)
  (foreign_stubs
    (language c)
    (names tree_sitter_stubs)
    (flags 
      -I%{env:TSINC=/usr/include}
      -I%{workspace_root}/languages/javascript
      -I%{workspace_root}/languages/ocaml))
  (libraries ctypes.stubs))
